// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getGitCommits > parse custom links 1`] = `
[
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "some long description

BREAKING CHANGE: Some breaky change
",
    "hash": "1dfaff1",
    "links": {
      "#123": {
        "link": "123",
        "token": "#123",
      },
    },
    "subject": "test(git): test commit with something",
    "tags": [
      "v1.0.5",
      "v1.0.1",
    ],
    "trailers": [
      {
        "token": "fix",
        "value": "#123",
      },
    ],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5a84e8d",
    "links": {
      "#22": {
        "link": "22",
        "token": "#22",
      },
    },
    "subject": "chore: disable auto release #22",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions[bot]@users.noreply.github.com",
    "authorName": "github-actions[bot]",
    "body": "",
    "hash": "cde6098",
    "links": {
      "Wroud/foundation#41": {
        "link": "41",
        "repository": "Wroud/foundation",
        "token": "Wroud/foundation#41",
      },
    },
    "subject": "chore: release @wroud/di@0.9.1 Wroud/foundation#41",
    "tags": [
      "di-v0.9.1",
    ],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "
some changes in #11
",
    "hash": "26768a0",
    "links": {
      "#11": {
        "link": "11",
        "token": "#11",
      },
    },
    "subject": "fix: add automated releases",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "
some changes in GH-15
",
    "hash": "26768a0",
    "links": {
      "GH-15": {
        "link": "15",
        "token": "GH-15",
      },
    },
    "subject": "fix: add automated releases",
    "tags": [],
    "trailers": [],
  },
]
`;

exports[`getGitCommits > with custom trailer 1`] = `
[
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "some long description
",
    "hash": "1dfaff1",
    "links": {},
    "subject": "test(git): test commit with something",
    "tags": [
      "v1.0.5",
      "v1.0.1",
    ],
    "trailers": [
      {
        "token": "BREAKING CHANGE",
        "value": "Some breaky change",
      },
      {
        "token": "fix",
        "value": "#123",
      },
    ],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5a84e8d",
    "links": {},
    "subject": "chore: disable auto release",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions[bot]@users.noreply.github.com",
    "authorName": "github-actions[bot]",
    "body": "",
    "hash": "cde6098",
    "links": {},
    "subject": "chore: release @wroud/di@0.9.1",
    "tags": [
      "di-v0.9.1",
    ],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "26768a0",
    "links": {},
    "subject": "fix: add automated releases",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ca0db97",
    "links": {},
    "subject": "feat: update github workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d9774d6",
    "links": {},
    "subject": "ci: inherit secrets in workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "afa7fd3",
    "links": {},
    "subject": "chore: fix readme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions[bot]@users.noreply.github.com",
    "authorName": "github-actions[bot]",
    "body": "",
    "hash": "1624c31",
    "links": {},
    "subject": "chore: release @wroud/di@0.9.0",
    "tags": [
      "di-v0.9.0",
    ],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0848e0a",
    "links": {},
    "subject": "ci: fix workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "82e92ef",
    "links": {},
    "subject": "ci: enable corepack",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "3e25589",
    "links": {},
    "subject": "chore: remove yarn cache",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2c35601",
    "links": {},
    "subject": "ci: update dependencies and github workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0c0e299",
    "links": {},
    "subject": "chore: remove test from readme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "02df602",
    "links": {},
    "subject": "ci: rewrite bump resolver",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions[bot]@users.noreply.github.com",
    "authorName": "github-actions[bot]",
    "body": "",
    "hash": "e801bdb",
    "links": {},
    "subject": "chore: release @wroud/di@0.8.5",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d824036",
    "links": {},
    "subject": "ci: add package name to releases",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "01e09a8",
    "links": {},
    "subject": "ci: properly handle errors",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "c3378cc",
    "links": {},
    "subject": "ci: commit as github actions bot",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "041d000",
    "links": {},
    "subject": "chore: release 0.8.4",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cc0fe8a",
    "links": {},
    "subject": "ci: trigger update",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b58a7dd",
    "links": {},
    "subject": "ci: configure publishing github releases",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "e514809",
    "links": {},
    "subject": "chore: release 0.8.3",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "48cc6f1",
    "links": {},
    "subject": "ci: filter release commit only for bump check",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "a80b948",
    "links": {},
    "subject": "chore: release 0.8.2",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4262c3b",
    "links": {},
    "subject": "chore: push annotated tags",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "a251066",
    "links": {},
    "subject": "chore: release 0.8.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "fc02a0d",
    "links": {},
    "subject": "chore: trigger release",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "9ff54fc",
    "links": {},
    "subject": "chore: release 0.8.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "a9443ec",
    "links": {},
    "subject": "ci: push fixed tag",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "55a315c",
    "links": {},
    "subject": "chore: release 0.7.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4a6430d",
    "links": {},
    "subject": "chore: add changelog for di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "5a14585",
    "links": {},
    "subject": "chore: release 0.6.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* chore: rebase

* test: fix tests",
    "hash": "f9f8224",
    "links": {},
    "subject": "chore: rebase (#15)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: configure gulp

* ci: read package version directly

* ci: skip release commits

* ci: enable github releases

* ci: remove changelog",
    "hash": "d2ea47b",
    "links": {},
    "subject": "Ci/configure gulp for ci (#14)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "e0dd0e5",
    "links": {},
    "subject": "chore: release undefined",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: configure gulp

* ci: read package version directly

* ci: skip release commits",
    "hash": "5b43fb0",
    "links": {},
    "subject": "Ci/configure gulp for ci (#13)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "dc0f7d0",
    "links": {},
    "subject": "chore: release undefined",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: configure gulp

* ci: read package version directly",
    "hash": "3ef2856",
    "links": {},
    "subject": "Ci/configure gulp for ci (#12)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "f6d4755",
    "links": {},
    "subject": "ci: configure gulp (#11)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "cf5ef0c",
    "links": {},
    "subject": "ci: add empty placeholder command ci:prepublish (#10)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "d8a8ebe",
    "links": {},
    "subject": "Release di-v0.5.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: fail on empty commits

* ci: commit lockfile",
    "hash": "71d3bf2",
    "links": {},
    "subject": "ci: fail on empty commits (#9)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "bd5311a",
    "links": {},
    "subject": "Release v0.4.3",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "ff36f54",
    "links": {},
    "subject": "Release v0.4.2",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "231a0aa",
    "links": {},
    "subject": "Release v0.4.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "5dfac88",
    "links": {},
    "subject": "Release v0.4.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "e839687",
    "links": {},
    "subject": "ci: run prepublish scripts",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "c15cea7",
    "links": {},
    "subject": "Release v0.3.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "5591856",
    "links": {},
    "subject": "Release v0.3.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: run prepublish scripts

* ci: use different method for brunch detection

* ci: fix release workflow

* ci: setup path to vitest config

* ci: configure github actions commit",
    "hash": "6bf7753",
    "links": {},
    "subject": "Ci/run prepublish scripts (#7)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: run prepublish scripts

* ci: use different method for brunch detection

* ci: fix release workflow

* ci: setup path to vitest config",
    "hash": "82d6875",
    "links": {},
    "subject": "Ci/run prepublish scripts (#6)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: run prepublish scripts

* ci: use different method for brunch detection",
    "hash": "b24e2c2",
    "links": {},
    "subject": "ci: run prepublish scripts (#5)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: add changelog and automatic releases

* ci: coverage report fix

* ci: sanitize branch name in github workflows",
    "hash": "c5af8e3",
    "links": {},
    "subject": "ci: add changelog and automatic releases (#4)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d31ce7b",
    "links": {},
    "subject": "chore(di-react): optimize useAbandonedRenderDisposer timeout",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ccfac38",
    "links": {},
    "subject": "chore(react): update readme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "dedfddd",
    "links": {},
    "subject": "chore: update docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "717c44e",
    "links": {},
    "subject": "chore: update docs for di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0a79da6",
    "links": {},
    "subject": "chore: Update @wroud/di-react package version to 0.0.2 and add React bindings for DI",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "65698ad",
    "links": {},
    "subject": "chore: Update package versions for @wroud/di-tools-analyzer, @wroud/di-tools-codemod, and @wroud/di to 0.1.0, 0.1.0, and 0.2.0 respectively",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "fcf6004",
    "links": {},
    "subject": "chore: update deps",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5cb14f4",
    "links": {},
    "subject": "chore(di-react): add react bindings for di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "30807d4",
    "links": {},
    "subject": "chore(di): reorganize exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "8615243",
    "links": {},
    "subject": "chore: update imports for di-tools-analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4e236f3",
    "links": {},
    "subject": "chore: update exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "74656a2",
    "links": {},
    "subject": "chore: add documentation about lazy",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0a74691",
    "links": {},
    "subject": "chore: Update @wroud/di package to version 0.1.5 and include production module",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "392170e",
    "links": {},
    "subject": "chore: Bump @wroud/di version to 0.1.4",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1023ebc",
    "links": {},
    "subject": "chore: add better debugging and optimized production build",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "8e5da34",
    "links": {},
    "subject": "chore: Fix import in injectable.test.ts",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6c78545",
    "links": {},
    "subject": "chore: update unit tests",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2f82db3",
    "links": {},
    "subject": "chore: Update @wroud/di to version 0.1.3",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0e80287",
    "links": {},
    "subject": "chore: Exclude test files from package build",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6357a3a",
    "links": {},
    "subject": "chore: Update @wroud/di to version 0.1.2",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e7c2505",
    "links": {},
    "subject": "chore: update dependencies",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "258b0ec",
    "links": {},
    "subject": "chore: bump version @wroud/di to 0.1.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0d861be",
    "links": {},
    "subject": "chore: rename diLazy -> lazy",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b3fb16c",
    "links": {},
    "subject": "chore: update vitest to 2 version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5d407ee",
    "links": {},
    "subject": "chore: bump version @wroud/di to 0.1.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "792d6b6",
    "links": {},
    "subject": "feat: lazy implementation loading",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "387a1fc",
    "links": {},
    "subject": "chore: rename IServiceImplementation to ISyncServiceImplementation",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "65bf5af",
    "links": {},
    "subject": "chore: split logic",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "7dbff6d",
    "links": {},
    "subject": "chore: rename configs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d5ac8c0",
    "links": {},
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "dcf424a",
    "links": {},
    "subject": "fix: tsconfig",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "802ee0c",
    "links": {},
    "subject": "chore: update yarn.lock",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "412907f",
    "links": {},
    "subject": "chore: migrate to vitest",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0c7228a",
    "links": {},
    "subject": "fix: cyclic dependencies detection",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "43a43b5",
    "links": {},
    "subject": "fix: change package type",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6773df2",
    "links": {},
    "subject": "chore: change output to commonjs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4672641",
    "links": {},
    "subject": "fix: run as common js module",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6ed140b",
    "links": {},
    "subject": "chore: update dependencies",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b392ebf",
    "links": {},
    "subject": "chore: update bin",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b65f7e9",
    "links": {},
    "subject": "fix: exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1c4c04c",
    "links": {},
    "subject": "feat: @wroud/di-tools-codemod",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "712d055",
    "links": {},
    "subject": "chore: bump \`@wroud/di-tools-analyzer\` version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e5142e0",
    "links": {},
    "subject": "docs: ModuleRegistry api",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d7ef251",
    "links": {},
    "subject": "feat: add full screen mode for di analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "52276d5",
    "links": {},
    "subject": "docs: add documentation for @wroud/di-tools-analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5e5e195",
    "links": {},
    "subject": "fix: robots.txt name",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "19bdf3b",
    "links": {},
    "subject": "feat: add robots.txt",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f40e2f7",
    "links": {},
    "subject": "chore: tune layout",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "3aa1529",
    "links": {},
    "subject": "fix: graph example",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6379e3f",
    "links": {},
    "subject": "feat: move graph to another page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5ce1124",
    "links": {},
    "subject": "feat: add di analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cf852fa",
    "links": {},
    "subject": "docs: remove extra",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5f55b1c",
    "links": {},
    "subject": "docs: make examples simpler",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f76c015",
    "links": {},
    "subject": "docs: simplify samples",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "33c7dd4",
    "links": {},
    "subject": "docs: add "Why DI?" page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2f89822",
    "links": {},
    "subject": "chore: move tsconfig to separate package",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "84543ee",
    "links": {},
    "subject": "chore: remove example from source code",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "851d0eb",
    "links": {},
    "subject": "chore: add package description",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e7759c1",
    "links": {},
    "subject": "docs: update docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "9b0bc81",
    "links": {},
    "subject": "chore: remove template pages",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4d04ec9",
    "links": {},
    "subject": "fix: docs sitemap filter",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d117ac4",
    "links": {},
    "subject": "chore: filter test pages from sitemap",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "95b1979",
    "links": {},
    "subject": "chore: add keywords",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1da9a4e",
    "links": {},
    "subject": "chore: add license and readme for @wroud/di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "10c7455",
    "links": {},
    "subject": "fix: adjust memory threshold for GC",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "3037269",
    "links": {},
    "subject": "chore: add logo",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "201aba6",
    "links": {},
    "subject": "feat: adjust SEO in docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "c5ff8f6",
    "links": {},
    "subject": "fix: docs logo styles in light theme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0a14136",
    "links": {},
    "subject": "feat: add logo to docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cdb9148",
    "links": {},
    "subject": "chore: update docs and add GA",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1eef8d6",
    "links": {},
    "subject": "chore: bump version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5286029",
    "links": {},
    "subject": "docs: complete base articles",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "eceb0c4",
    "links": {},
    "subject": "chore: update version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b6a45ff",
    "links": {},
    "subject": "fix: proper error message while resolving scoped dependency for singleton service",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "61c73bf",
    "links": {},
    "subject": "chore: specify files list",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ff3238e",
    "links": {},
    "subject": "fix: update types",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "93c4640",
    "links": {},
    "subject": "chore: update version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d7517cc",
    "links": {},
    "subject": "fix: version lazy loading leads to incorrect badge on first render",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f98f7b1",
    "links": {},
    "subject": "docs: collect jest statistic for provided package",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6d43540",
    "links": {},
    "subject": "feat: add strict types to ServicesRegistry.register",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "25845a7",
    "links": {},
    "subject": "fix(tests): add logs to console",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ea20107",
    "links": {},
    "subject": "chore(tests): increase memory threshold",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "013ed92",
    "links": {},
    "subject": "chore: add coverage badge",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1a8cd2f",
    "links": {},
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d95c6d4",
    "links": {},
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "57eee77",
    "links": {},
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b931c2c",
    "links": {},
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ab52910",
    "links": {},
    "subject": "fix: workflow",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2d55876",
    "links": {},
    "subject": "tests: add json-summary reporter",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1dca2b4",
    "links": {},
    "subject": "tests: add some tests and badges",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "7720341",
    "links": {},
    "subject": "fix: build docs separately",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "193d9c3",
    "links": {},
    "subject": "chore: update build process",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6fb62f9",
    "links": {},
    "subject": "docs: add installation section",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "83012a5",
    "links": {},
    "subject": "fix(docs): link to the di overview page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "07932df",
    "links": {},
    "subject": "chore: update version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "45d8572",
    "links": {},
    "subject": "chore: add homepage and repository to package.json",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "beca909",
    "links": {},
    "subject": "chore: update exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "fc9ef0f",
    "links": {},
    "subject": "docs: add dependency injection overview page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "83d3093",
    "links": {},
    "subject": "fix: pages deploy workflow",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f193d85",
    "links": {},
    "subject": "feat: add github pages",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "83108bd",
    "links": {},
    "subject": "fix: return publish package dir",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e3c1a3b",
    "links": {},
    "subject": "chore: bump version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5ebef39",
    "links": {},
    "subject": "feat: add module and types",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ae35e9f",
    "links": {},
    "subject": "fix: add version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ee089fa",
    "links": {},
    "subject": "fix: publish workflow",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "feat: add cache cleanup action",
    "hash": "8a420ab",
    "links": {},
    "subject": "Merge pull request #3 from Wroud/fix/add-cleanup",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0c4a86d",
    "links": {},
    "subject": "feat: add cache cleanup action",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "feat: add github workflows",
    "hash": "9d0965e",
    "links": {},
    "subject": "Merge pull request #2 from Wroud/feat/github-workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "41d0e01",
    "links": {},
    "subject": "fix: codecov ci",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "62aec5f",
    "links": {},
    "subject": "fix: collect coverage",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cf9454d",
    "links": {},
    "subject": "feat: configure code coverage",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0d675f9",
    "links": {},
    "subject": "feat: enable zero installs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "a8879c6",
    "links": {},
    "subject": "fix: remove dist",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "c27dbf0",
    "links": {},
    "subject": "fix: configure ci",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e92166a",
    "links": {},
    "subject": "feat: add github workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "feat: init workspace",
    "hash": "9777ef5",
    "links": {},
    "subject": "Merge pull request #1 from Wroud/feat/init-workspace",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1306e07",
    "links": {},
    "subject": "feat: init workspace",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "efd26d4",
    "links": {},
    "subject": "Initial commit",
    "tags": [],
    "trailers": [],
  },
]
`;

exports[`getGitCommits > with path 1`] = `
[
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "some long description

BREAKING CHANGE: Some breaky change
",
    "hash": "1dfaff1",
    "links": {},
    "subject": "test(git): test commit with something",
    "tags": [
      "v1.0.5",
      "v1.0.1",
    ],
    "trailers": [
      {
        "token": "fix",
        "value": "#123",
      },
    ],
  },
]
`;

exports[`getGitCommits > without arguments 1`] = `
[
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "some long description

BREAKING CHANGE: Some breaky change
",
    "hash": "1dfaff1",
    "links": {},
    "subject": "test(git): test commit with something",
    "tags": [
      "v1.0.5",
      "v1.0.1",
    ],
    "trailers": [
      {
        "token": "fix",
        "value": "#123",
      },
    ],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5a84e8d",
    "links": {},
    "subject": "chore: disable auto release",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions[bot]@users.noreply.github.com",
    "authorName": "github-actions[bot]",
    "body": "",
    "hash": "cde6098",
    "links": {},
    "subject": "chore: release @wroud/di@0.9.1",
    "tags": [
      "di-v0.9.1",
    ],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "26768a0",
    "links": {},
    "subject": "fix: add automated releases",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ca0db97",
    "links": {},
    "subject": "feat: update github workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d9774d6",
    "links": {},
    "subject": "ci: inherit secrets in workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "afa7fd3",
    "links": {},
    "subject": "chore: fix readme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions[bot]@users.noreply.github.com",
    "authorName": "github-actions[bot]",
    "body": "",
    "hash": "1624c31",
    "links": {},
    "subject": "chore: release @wroud/di@0.9.0",
    "tags": [
      "di-v0.9.0",
    ],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0848e0a",
    "links": {},
    "subject": "ci: fix workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "82e92ef",
    "links": {},
    "subject": "ci: enable corepack",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "3e25589",
    "links": {},
    "subject": "chore: remove yarn cache",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2c35601",
    "links": {},
    "subject": "ci: update dependencies and github workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0c0e299",
    "links": {},
    "subject": "chore: remove test from readme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "02df602",
    "links": {},
    "subject": "ci: rewrite bump resolver",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions[bot]@users.noreply.github.com",
    "authorName": "github-actions[bot]",
    "body": "",
    "hash": "e801bdb",
    "links": {},
    "subject": "chore: release @wroud/di@0.8.5",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d824036",
    "links": {},
    "subject": "ci: add package name to releases",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "01e09a8",
    "links": {},
    "subject": "ci: properly handle errors",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "c3378cc",
    "links": {},
    "subject": "ci: commit as github actions bot",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "041d000",
    "links": {},
    "subject": "chore: release 0.8.4",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cc0fe8a",
    "links": {},
    "subject": "ci: trigger update",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b58a7dd",
    "links": {},
    "subject": "ci: configure publishing github releases",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "e514809",
    "links": {},
    "subject": "chore: release 0.8.3",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "48cc6f1",
    "links": {},
    "subject": "ci: filter release commit only for bump check",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "a80b948",
    "links": {},
    "subject": "chore: release 0.8.2",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4262c3b",
    "links": {},
    "subject": "chore: push annotated tags",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "a251066",
    "links": {},
    "subject": "chore: release 0.8.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "fc02a0d",
    "links": {},
    "subject": "chore: trigger release",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "9ff54fc",
    "links": {},
    "subject": "chore: release 0.8.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "a9443ec",
    "links": {},
    "subject": "ci: push fixed tag",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "55a315c",
    "links": {},
    "subject": "chore: release 0.7.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4a6430d",
    "links": {},
    "subject": "chore: add changelog for di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "5a14585",
    "links": {},
    "subject": "chore: release 0.6.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* chore: rebase

* test: fix tests",
    "hash": "f9f8224",
    "links": {},
    "subject": "chore: rebase (#15)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: configure gulp

* ci: read package version directly

* ci: skip release commits

* ci: enable github releases

* ci: remove changelog",
    "hash": "d2ea47b",
    "links": {},
    "subject": "Ci/configure gulp for ci (#14)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "e0dd0e5",
    "links": {},
    "subject": "chore: release undefined",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: configure gulp

* ci: read package version directly

* ci: skip release commits",
    "hash": "5b43fb0",
    "links": {},
    "subject": "Ci/configure gulp for ci (#13)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "dc0f7d0",
    "links": {},
    "subject": "chore: release undefined",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: configure gulp

* ci: read package version directly",
    "hash": "3ef2856",
    "links": {},
    "subject": "Ci/configure gulp for ci (#12)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "f6d4755",
    "links": {},
    "subject": "ci: configure gulp (#11)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "cf5ef0c",
    "links": {},
    "subject": "ci: add empty placeholder command ci:prepublish (#10)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "d8a8ebe",
    "links": {},
    "subject": "Release di-v0.5.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: fail on empty commits

* ci: commit lockfile",
    "hash": "71d3bf2",
    "links": {},
    "subject": "ci: fail on empty commits (#9)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "bd5311a",
    "links": {},
    "subject": "Release v0.4.3",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "ff36f54",
    "links": {},
    "subject": "Release v0.4.2",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "231a0aa",
    "links": {},
    "subject": "Release v0.4.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "5dfac88",
    "links": {},
    "subject": "Release v0.4.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "e839687",
    "links": {},
    "subject": "ci: run prepublish scripts",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "c15cea7",
    "links": {},
    "subject": "Release v0.3.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "5591856",
    "links": {},
    "subject": "Release v0.3.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: run prepublish scripts

* ci: use different method for brunch detection

* ci: fix release workflow

* ci: setup path to vitest config

* ci: configure github actions commit",
    "hash": "6bf7753",
    "links": {},
    "subject": "Ci/run prepublish scripts (#7)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: run prepublish scripts

* ci: use different method for brunch detection

* ci: fix release workflow

* ci: setup path to vitest config",
    "hash": "82d6875",
    "links": {},
    "subject": "Ci/run prepublish scripts (#6)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: run prepublish scripts

* ci: use different method for brunch detection",
    "hash": "b24e2c2",
    "links": {},
    "subject": "ci: run prepublish scripts (#5)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: add changelog and automatic releases

* ci: coverage report fix

* ci: sanitize branch name in github workflows",
    "hash": "c5af8e3",
    "links": {},
    "subject": "ci: add changelog and automatic releases (#4)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d31ce7b",
    "links": {},
    "subject": "chore(di-react): optimize useAbandonedRenderDisposer timeout",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ccfac38",
    "links": {},
    "subject": "chore(react): update readme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "dedfddd",
    "links": {},
    "subject": "chore: update docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "717c44e",
    "links": {},
    "subject": "chore: update docs for di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0a79da6",
    "links": {},
    "subject": "chore: Update @wroud/di-react package version to 0.0.2 and add React bindings for DI",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "65698ad",
    "links": {},
    "subject": "chore: Update package versions for @wroud/di-tools-analyzer, @wroud/di-tools-codemod, and @wroud/di to 0.1.0, 0.1.0, and 0.2.0 respectively",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "fcf6004",
    "links": {},
    "subject": "chore: update deps",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5cb14f4",
    "links": {},
    "subject": "chore(di-react): add react bindings for di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "30807d4",
    "links": {},
    "subject": "chore(di): reorganize exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "8615243",
    "links": {},
    "subject": "chore: update imports for di-tools-analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4e236f3",
    "links": {},
    "subject": "chore: update exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "74656a2",
    "links": {},
    "subject": "chore: add documentation about lazy",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0a74691",
    "links": {},
    "subject": "chore: Update @wroud/di package to version 0.1.5 and include production module",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "392170e",
    "links": {},
    "subject": "chore: Bump @wroud/di version to 0.1.4",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1023ebc",
    "links": {},
    "subject": "chore: add better debugging and optimized production build",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "8e5da34",
    "links": {},
    "subject": "chore: Fix import in injectable.test.ts",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6c78545",
    "links": {},
    "subject": "chore: update unit tests",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2f82db3",
    "links": {},
    "subject": "chore: Update @wroud/di to version 0.1.3",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0e80287",
    "links": {},
    "subject": "chore: Exclude test files from package build",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6357a3a",
    "links": {},
    "subject": "chore: Update @wroud/di to version 0.1.2",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e7c2505",
    "links": {},
    "subject": "chore: update dependencies",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "258b0ec",
    "links": {},
    "subject": "chore: bump version @wroud/di to 0.1.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0d861be",
    "links": {},
    "subject": "chore: rename diLazy -> lazy",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b3fb16c",
    "links": {},
    "subject": "chore: update vitest to 2 version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5d407ee",
    "links": {},
    "subject": "chore: bump version @wroud/di to 0.1.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "792d6b6",
    "links": {},
    "subject": "feat: lazy implementation loading",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "387a1fc",
    "links": {},
    "subject": "chore: rename IServiceImplementation to ISyncServiceImplementation",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "65bf5af",
    "links": {},
    "subject": "chore: split logic",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "7dbff6d",
    "links": {},
    "subject": "chore: rename configs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d5ac8c0",
    "links": {},
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "dcf424a",
    "links": {},
    "subject": "fix: tsconfig",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "802ee0c",
    "links": {},
    "subject": "chore: update yarn.lock",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "412907f",
    "links": {},
    "subject": "chore: migrate to vitest",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0c7228a",
    "links": {},
    "subject": "fix: cyclic dependencies detection",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "43a43b5",
    "links": {},
    "subject": "fix: change package type",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6773df2",
    "links": {},
    "subject": "chore: change output to commonjs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4672641",
    "links": {},
    "subject": "fix: run as common js module",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6ed140b",
    "links": {},
    "subject": "chore: update dependencies",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b392ebf",
    "links": {},
    "subject": "chore: update bin",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b65f7e9",
    "links": {},
    "subject": "fix: exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1c4c04c",
    "links": {},
    "subject": "feat: @wroud/di-tools-codemod",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "712d055",
    "links": {},
    "subject": "chore: bump \`@wroud/di-tools-analyzer\` version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e5142e0",
    "links": {},
    "subject": "docs: ModuleRegistry api",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d7ef251",
    "links": {},
    "subject": "feat: add full screen mode for di analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "52276d5",
    "links": {},
    "subject": "docs: add documentation for @wroud/di-tools-analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5e5e195",
    "links": {},
    "subject": "fix: robots.txt name",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "19bdf3b",
    "links": {},
    "subject": "feat: add robots.txt",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f40e2f7",
    "links": {},
    "subject": "chore: tune layout",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "3aa1529",
    "links": {},
    "subject": "fix: graph example",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6379e3f",
    "links": {},
    "subject": "feat: move graph to another page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5ce1124",
    "links": {},
    "subject": "feat: add di analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cf852fa",
    "links": {},
    "subject": "docs: remove extra",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5f55b1c",
    "links": {},
    "subject": "docs: make examples simpler",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f76c015",
    "links": {},
    "subject": "docs: simplify samples",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "33c7dd4",
    "links": {},
    "subject": "docs: add "Why DI?" page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2f89822",
    "links": {},
    "subject": "chore: move tsconfig to separate package",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "84543ee",
    "links": {},
    "subject": "chore: remove example from source code",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "851d0eb",
    "links": {},
    "subject": "chore: add package description",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e7759c1",
    "links": {},
    "subject": "docs: update docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "9b0bc81",
    "links": {},
    "subject": "chore: remove template pages",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4d04ec9",
    "links": {},
    "subject": "fix: docs sitemap filter",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d117ac4",
    "links": {},
    "subject": "chore: filter test pages from sitemap",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "95b1979",
    "links": {},
    "subject": "chore: add keywords",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1da9a4e",
    "links": {},
    "subject": "chore: add license and readme for @wroud/di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "10c7455",
    "links": {},
    "subject": "fix: adjust memory threshold for GC",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "3037269",
    "links": {},
    "subject": "chore: add logo",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "201aba6",
    "links": {},
    "subject": "feat: adjust SEO in docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "c5ff8f6",
    "links": {},
    "subject": "fix: docs logo styles in light theme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0a14136",
    "links": {},
    "subject": "feat: add logo to docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cdb9148",
    "links": {},
    "subject": "chore: update docs and add GA",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1eef8d6",
    "links": {},
    "subject": "chore: bump version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5286029",
    "links": {},
    "subject": "docs: complete base articles",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "eceb0c4",
    "links": {},
    "subject": "chore: update version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b6a45ff",
    "links": {},
    "subject": "fix: proper error message while resolving scoped dependency for singleton service",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "61c73bf",
    "links": {},
    "subject": "chore: specify files list",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ff3238e",
    "links": {},
    "subject": "fix: update types",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "93c4640",
    "links": {},
    "subject": "chore: update version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d7517cc",
    "links": {},
    "subject": "fix: version lazy loading leads to incorrect badge on first render",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f98f7b1",
    "links": {},
    "subject": "docs: collect jest statistic for provided package",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6d43540",
    "links": {},
    "subject": "feat: add strict types to ServicesRegistry.register",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "25845a7",
    "links": {},
    "subject": "fix(tests): add logs to console",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ea20107",
    "links": {},
    "subject": "chore(tests): increase memory threshold",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "013ed92",
    "links": {},
    "subject": "chore: add coverage badge",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1a8cd2f",
    "links": {},
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d95c6d4",
    "links": {},
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "57eee77",
    "links": {},
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b931c2c",
    "links": {},
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ab52910",
    "links": {},
    "subject": "fix: workflow",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2d55876",
    "links": {},
    "subject": "tests: add json-summary reporter",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1dca2b4",
    "links": {},
    "subject": "tests: add some tests and badges",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "7720341",
    "links": {},
    "subject": "fix: build docs separately",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "193d9c3",
    "links": {},
    "subject": "chore: update build process",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6fb62f9",
    "links": {},
    "subject": "docs: add installation section",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "83012a5",
    "links": {},
    "subject": "fix(docs): link to the di overview page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "07932df",
    "links": {},
    "subject": "chore: update version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "45d8572",
    "links": {},
    "subject": "chore: add homepage and repository to package.json",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "beca909",
    "links": {},
    "subject": "chore: update exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "fc9ef0f",
    "links": {},
    "subject": "docs: add dependency injection overview page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "83d3093",
    "links": {},
    "subject": "fix: pages deploy workflow",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f193d85",
    "links": {},
    "subject": "feat: add github pages",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "83108bd",
    "links": {},
    "subject": "fix: return publish package dir",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e3c1a3b",
    "links": {},
    "subject": "chore: bump version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5ebef39",
    "links": {},
    "subject": "feat: add module and types",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ae35e9f",
    "links": {},
    "subject": "fix: add version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ee089fa",
    "links": {},
    "subject": "fix: publish workflow",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "feat: add cache cleanup action",
    "hash": "8a420ab",
    "links": {},
    "subject": "Merge pull request #3 from Wroud/fix/add-cleanup",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0c4a86d",
    "links": {},
    "subject": "feat: add cache cleanup action",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "feat: add github workflows",
    "hash": "9d0965e",
    "links": {},
    "subject": "Merge pull request #2 from Wroud/feat/github-workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "41d0e01",
    "links": {},
    "subject": "fix: codecov ci",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "62aec5f",
    "links": {},
    "subject": "fix: collect coverage",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cf9454d",
    "links": {},
    "subject": "feat: configure code coverage",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0d675f9",
    "links": {},
    "subject": "feat: enable zero installs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "a8879c6",
    "links": {},
    "subject": "fix: remove dist",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "c27dbf0",
    "links": {},
    "subject": "fix: configure ci",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e92166a",
    "links": {},
    "subject": "feat: add github workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "feat: init workspace",
    "hash": "9777ef5",
    "links": {},
    "subject": "Merge pull request #1 from Wroud/feat/init-workspace",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1306e07",
    "links": {},
    "subject": "feat: init workspace",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "efd26d4",
    "links": {},
    "subject": "Initial commit",
    "tags": [],
    "trailers": [],
  },
]
`;
